for #861 moved from URL to URI.  Can't reproduce the original issue but this should fix the stack trace.